# gbj11

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  README.md  index.html  release-please-config.json
.github/: dependabot.yml
.github/workflows/: release-pr.yml  test.yaml
assets/: entities.assets.ron  player.assets.ron
raw-assets/: baddie1.ase  bg.ase  missle.ase  pallet.aseprite  player.ase
src/: animation.rs  hud.rs  main.rs
