[package]
name = "gbj23"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_progress = "0.9.1"
console_error_panic_hook = "0.1.7"
leafwing-input-manager = "0.10.0"

#rand_seeder = "0.2.3"

#[dependencies.rand]
#version = "0.8.5"
#features = ["small_rng"]

[dependencies.bevy]
version = "0.11.3"

[dependencies.bevy_xpbd_2d]
# version = "0.2"
git = "https://github.com/Jondolf/bevy_xpbd"
features = ["debug-plugin"]

[dependencies.bevy_asset_loader]
version = "0.17.0"
features = ["2d", "progress_tracking"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
