[package]
name = "gbj23"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_progress = "0.10"
console_error_panic_hook = "0.1.7"
leafwing-input-manager = "0.11"

#rand_seeder = "0.2.3"

#[dependencies.rand]
#version = "0.8.5"
#features = ["small_rng"]

[dependencies.bevy]
version = "0.12.1"

[dependencies.bevy_xpbd_2d]
version = "0.3"
features = ["debug-plugin"]

[dependencies.bevy_asset_loader]
version = "0.20"
features = ["2d", "progress_tracking"]

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
