[package]
name = "gbj23"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_progress = "0.11"
console_error_panic_hook = "0.1.7"
leafwing-input-manager = "^0.13"

#rand_seeder = "0.2.3"

#[dependencies.rand]
#version = "0.8.5"
#features = ["small_rng"]

[dependencies.bevy]
version = "^0.13.2"

[dependencies.bevy_xpbd_2d]
version = "^0.4"
features = ["debug-plugin"]

[dependencies.bevy_asset_loader]
version = "^0.20"
features = ["2d", "progress_tracking", "standard_dynamic_assets"]

[dev-dependencies]
wasm-bindgen-test = "^0.3.42"
